@@ -13,7 +13,7 @@
         DEBUGFLAG ERROR_VERBOSE EXPECT FILENAMES FLEX IDENTIFIER
         IMPLEMENTATION_HEADER LEFT LOCATIONSTRUCT LSP_NEEDED LTYPE NAMESPACE
         NEG_DOLLAR NOLINES NONASSOC NUMBER PARSEFUN_SOURCE POLYMORPHIC PREC
-        PRINT_TOKENS QUOTE REQUIRED RIGHT SCANNER
+        PRINT_TOKENS QUOTE REQUIRED RIGHT SCANNER SCANNER_CLASS_NAME
         SCANNER_MATCHED_TEXT_FUNCTION SCANNER_TOKEN_FUNCTION START STRING
         STYPE TARGET_DIRECTORY TOKEN TWO_PERCENTS TYPE UNION WEAK_TAGS 
         
